# LearningStuff

./: README.md
LearningHaskell/: README.md  UsePictures.hs
LearningHaskell/ch 4/: script.hs
LearningHaskell/haskell/: README.md  UsePictures.hs
LearningScheme/: characters.scm  output.scm  strings.scm  variables2.scm
LearningScheme/ch_3/: input.scm  output2.scm  procedure_args.scm  substrings.scm  variables.scm
LearningScheme/ch_4/: collections.scm  quotes.scm  structures.scm
learning_bevy/galaxy_demo/: Cargo.toml
learning_bevy/galaxy_demo/src/: main.rs
