[package]
name = "galaxy_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] } # enables dynamic linking of bevy, excluding dependencies from the executable
bevy_panorbit_camera = { git = "https://github.com/Plonq/bevy_panorbit_camera.git", branch = "bevy-0.13", version = "0.13.1" }

[profile.dev] 
opt-level = 1

# enable high optimizations for dependencies, but not for code
[profile.dev.package."*"]
opt-level = 3
